force-app/main/default/objects/Opportunity_Comment__c/Opportunity_Comment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Comment</label>
    <nameField>
        <displayFormat>OPCOM-{0000}</displayFormat>
        <label>Opportunity Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>