force-app/main/default/objects/Opportunity_Comment__c/fields/Created_Date_FORM__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_FORM__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>