force-app/main/default/objects/Opportunity_Comment__c/fields/Include_In_Latest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Latest_Comment__c</fullName>
    <formula>TEXT(Comment_Type__c) = &apos;Administrative&apos; || TEXT(Comment_Type__c) = &apos;Internal&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include In Latest Comment</label>
    <type>Checkbox</type>
</CustomField>