force-app/main/default/objects/Opportunity_Comment__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Opportunity_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>