force-app/main/default/objects/Opportunity_Comment__c/validationRules/Compliance_Users_Type_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Users_Type_Opp</fullName>
    <active>true</active>
    <description>Compliance users can only create comments of Compliance Type</description>
    <errorConditionFormula>NOT(ISPICKVAL( Comment_Type__c, &apos;Compliance&apos;)) &amp;&amp;
 $User.ProfileId = &apos;00ei0000001XP7O&apos;</errorConditionFormula>
    <errorDisplayField>Comment_Type__c</errorDisplayField>
    <errorMessage>Compliance users can only create Compliance comments.</errorMessage>
</ValidationRule>