force-app/main/default/objects/Opportunity_Comment__c/validationRules/Opp_Comments_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Comments_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  Comment__c ) || ISNULL(  Comment__c )</errorConditionFormula>
    <errorMessage>Cannot save empty Opportunity comments.</errorMessage>
</ValidationRule>